--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
   	          </thead>
           		<tr>
   		            <td>
-  		            <img src="Port Images/vendingmachinephoto.jpg"/>
-  		            </td>
+ <a href="https://github.com/JavaJustin91/VendingMachine-" target="_blank"><img id="vendingimg" src="Port Images/vendingmachinephoto.jpg"/>  		            </td>
 	            
   		            <td>
   		            <img src="Port Images/nationalforestphoto.jpg"/>
