--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 	
 	<td>
 		 <button class="button" type="button"> 
-		<a href="https://javajustin91.github.io/" target="_blank"><span><img class="linkedinimg" src="Port Images/githubpic.png"/></span></a>
+		<a href="https://github.com/JavaJustin91/" target="_blank"><span><img class="linkedinimg" src="Port Images/githubpic.png"/></span></a>
 	    </button>
 		
 		
