--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						<div><img src="image/vendingmachinephoto.jpg" alt="img04"></div>
 						<figcaption>
 							<h3>Vending Machine</h3>
-							<a href="portfolio1.html">View</a>
+							<a href="portfolio/portfolio1.html">View</a>
 						</figcaption>
 					</figure>
 				</li>
@@ -278,7 +278,7 @@
 						<div><img src="image/brew.png" alt="img04"></div>
 						<figcaption>
 							<h3>Brew Browser</h3>
-							<a href="portfolio2.html">View</a>
+							<a href="portfolio/portfolio2.html">View</a>
 						</figcaption>
 					</figure>
 				</li>
@@ -288,7 +288,7 @@
 						<div><img src="image/map.jpg" alt="img04"></div>
 						<figcaption>
 							<h3>MAP</h3>
-							<a href="portfolio3.html">View</a>
+							<a href="portfolio/portfolio3.html">View</a>
 						</figcaption>
 					</figure>
 				</li>
