--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                                     </div>
                                     
                                     <div class="form-group">
-                                         <input type="submit" value="Send">
+                                         <input type="submit" class="btn btn-primary" value="Send">
                                     </div>
                                 </form>
 
