--- a/portfolio/portfolio3.html
+++ b/portfolio/portfolio3.html
@@ -86,8 +86,9 @@
                       <div id="carousel-reference" class="carousel slide" data-ride="carousel">
                           <!-- Wrapper for slides -->
                           <div class="carousel-inner">
-                              <div class="item active"><img src="../image/image_01.png" alt=""></div>
-                              <div class="item"><img src="../image/image_02.png" alt=""></div>
+                              <div class="item active"><img src="../image/maphome.png" alt=""></div>
+                              <div class="item"><img src="../image/mapregister.png" alt=""></div>
+                              <div class="item"><img src="../image/maplogin.png" alt=""></div>
                           </div>
                           
                           <!-- Controls -->
@@ -100,9 +101,9 @@
              <div class="row">
                  <div class="col-lg-10 col-lg-offset-1">
                      <div class="portfolio-text">
-                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
-                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
-                     	 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est </p>
+                         <p>MAP is an in-the-making Java SpringMVC based online video game that simulates a tabletop online simulator where users can meet up to go on fantasy based quests. Registration and settings are all logged to a database, as well as utilizing password encryption for an extra layer of security.</p>
+                        
+                     	 <p>You can view the source code <a href="" target="_blank">HERE</a></p>
                      </div>
                  </div>
              </div>
