--- a/portfolio/portfolio2.html
+++ b/portfolio/portfolio2.html
@@ -106,7 +106,7 @@
                      <div class="portfolio-text">
                          <p>Brew Browser is a SpringMVC application that allows a user to register and login to the site to browse for breweries using a google maps api. Brewery companies can also log in to add drinks to their site, all of which is logged to a database. </p>
     
-                     	 <p>You can view the source code <a href="" target="_blank">HERE</a></p>
+                     	 <p>You can view the app <a href="https://frozen-reaches-58792.herokuapp.com/" target="_blank">HERE</a></p>
                      </div>
                  </div>
              </div>
@@ -143,7 +143,6 @@
     =========================== -->
 	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="../js/bootstrap.min.js"></script>
-    <script src="../js/jquery.magnific-popup.min.js"></script>
     <script src="../js/creative-brands.js"></script>
     <script src="../js/jquery.easy-pie-chart.js"></script>
     <script src="../js/modernizr.custom.js"></script>
