--- a/index.html
+++ b/index.html
@@ -114,7 +114,13 @@
                 
                 <div class="col-md-7 col-sm-6 scrollpoint sp-effect1"><!-- Profile description --> 
                 	<h3>Justin Jones</h3>
-                  	<p>Hi, my name is Justin Jones. I began my career in the customer service industry 7 years ago and worked my way up to a customer relations manager at a large automotive retailer. I have an ability and passion to inspire and bring out the best in others, and have gained this by always trying to become the best version of myself, wether it be from testing my mettle against others in jiu jitsu competitions or by pushing past my mental limits in Marine Bootcamp. Currently, I am a Java Full-Stack Developer looking to extend my career path to an industry that both excites and challenges me. I'm always looking towards the future and striving to inspire those around me in order to create a positive and uplifting environment.</p>      
+                  	<p>One mindset that was taught to me at a young age is that to teach is to learn twice, and to learn twice is to further solidify what you know. I have applied this to many areas of my life, from being an instructor in martial arts to tutoring and mentoring coding bootcamp students in Java full-stack programming. </p>
+
+<p>The satisfaction that I get from teaching and helping others is the greatest feeling in the world to me. This further pushes me to become the best version of myself and to never stop learning and growing in all areas of my life, personal and professional, so that I can share my ever-increasing knowledge with others, and learn from them in turn. </p>
+
+<p>Currently, I am a full-stack software development contractor searching for a company to call “home,” with a team that values continuous learning and a strong, collaborative atmosphere. I am skilled in and enjoy both front-end and back-end development and believe that my well-rounded skillset and driven, “never-quit” attitude would make an excellent addition to any IT team. </p>
+
+                    <p>If you’re looking to hire fresh talent, are interested in learning about getting into software development, or just want to “talk tech,” send me a message using the contact form at the bottom of this page or <a href="https://www.linkedin.com/in/javajustin/" target="_blank" style="color:#b3daff;">connect with me on LinkedIn</a> - I’d love to chat!</p>      
                     
                     <div class="tweets"><!-- Quotes row --> 
                         <!-- Quotes slideshow --> 
