Added linkedin urls to testimonial images

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <!-- TESTIMONIAL 1 - START -->
                 <div class="col-sm-6 scrollpoint sp-effect1">
                     <div class="media">
-                        <a class="pull-left" href="#"><img class="media-object img-circle" src="image/garrett.jpg" alt=""></a>
+                        <a class="pull-left" href="https://www.linkedin.com/in/garrettlancy/"><img class="media-object img-circle" src="image/garrett.jpg" alt=""></a>
                         <div class="media-body">
                             <h4 class="media-heading">Garrett Lancy</h4>
                             <span>Webdesigner</span>
@@ -323,7 +323,7 @@
                 <!-- TESTIMONIAL 2 - START -->
                 <div class="col-sm-6 scrollpoint sp-effect2">
                     <div class="media">
-                        <a class="pull-left" href="#"><img class="media-object img-circle" src="image/sondra.jpg" alt=""></a>
+                        <a class="pull-left" href="https://www.linkedin.com/in/sondrac/"><img class="media-object img-circle" src="image/sondra.jpg" alt=""></a>
                         <div class="media-body">
                             <h4 class="media-heading">Sondra Coffin</h4>
                             <span>Webdesigner</span>
