Quick verbiage update

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                 
                 <div class="col-md-7 col-sm-6 scrollpoint sp-effect1"><!-- Profile description --> 
                 	<h3>Justin Jones</h3>
-                  	<p>One mindset that was taught to me at a young age is that to teach is to learn twice, and to learn twice is to further solidify what you know. I have applied this to many areas of my life, from being an instructor in martial arts to tutoring and mentoring coding bootcamp students in Java full-stack programming. </p>
+                  	<p>One mindset that was taught to me at a young age is that to teach is to learn twice. I have applied this to many areas of my life, from being an instructor in martial arts to tutoring and mentoring coding bootcamp students. </p>
 
-<p>The satisfaction that I get from teaching and helping others is the greatest feeling in the world to me. This further pushes me to become the best version of myself and to never stop learning and growing in all areas of my life, personal and professional, so that I can share my ever-increasing knowledge with others, and learn from them in turn. </p>
+<p>The satisfaction that I get from teaching and helping others is truly the greatest feeling in the world to me. This further pushes me to become the best version of myself and to never stop learning and growing in all areas of my life, personal and professional, so that I can share my ever-increasing knowledge with others and learn from them in turn. </p>
 
                     <p>If you’re looking to hire fresh talent, are interested in learning about getting into software development, or just want to “talk tech,” send me a message using the contact form at the bottom of this page or <a href="https://www.linkedin.com/in/javajustin/" target="_blank" style="color:#b3daff;">connect with me on LinkedIn</a> - I’d love to chat!</p>      
                     
